--- a/templates/play.html
+++ b/templates/play.html
@@ -142,20 +142,22 @@
 
 		/* Responsive layout for even smaller screens */
 		@media screen and (max-width: 480px) {
-		  .grid-container {
-		    grid-template-areas: 
-		      'header'
-		      'nav'
-		      'middle'
-		      'right' /* Changed the order to ensure "right" comes before "footer" */
-		      'footer';
-		  }
+	    .grid-container {
+	        display: grid; /* 使用grid佈局 */
+	        grid-template-areas: 
+	            'header'
+	            'nav'
+	            'middle'
+	            'right' /* 將 "right" 放在 "footer" 之前 */
+	            'footer';
+	        grid-template-columns: 1fr; /* 單一列，以便於小螢幕上堆疊 */
+	    }
 
-		  	.left, .middle, .right {
-		    grid-area: unset;
-		  }
-		}
-
+	    .left, .middle, .right {
+	        grid-area: unset; /* 重設各區塊的grid區域設定 */
+	        width: 100%; /* 確保區塊在小螢幕上滿寬度顯示 */
+	    }
+	}
 		 #myTop {
             display: none; /* Hidden by default */
             position: fixed; /* Fixed position */
