--- a/templates/play.html
+++ b/templates/play.html
@@ -144,23 +144,18 @@
 
 		/* Responsive layout for even smaller screens */
 		@media screen and (max-width: 480px) {
-		    .grid-container {
-		        display: grid; /* 使用grid佈局 */
-		        grid-template-areas: 
-		            'header'
-		            'nav'
-		            'left'
-		            'middle'
-		            'right'
-		            'footer';
-		        grid-template-columns: 1fr; /* 單一列，以便於小螢幕上堆疊 */
-		        grid-gap: 5px; /* 設定元素間的間距 */
-		    }
+		  .grid-container {
+		    grid-template-areas: 
+		      'header'
+		      'nav'
+		      'middle'
+		      'right' /* Changed the order to ensure "right" comes before "footer" */
+		      'footer';
+		  }
 
-		    .left, .middle, .right {
-		        grid-area: unset; /* 重設各區塊的grid區域設定 */
-		        width: 100%; /* 確保區塊在小螢幕上滿寬度顯示 */
-		    }
+		  	.left, .middle, .right {
+		    grid-area: unset;
+		  }
 		}
 		 #myTop {
             display: none; /* Hidden by default */
