--- a/templates/play.html
+++ b/templates/play.html
@@ -48,7 +48,7 @@
 			'middle middle '
 			'right right'
 			'footer footer footer footer footer footer';
-			grid-gap: 4px 4px;
+			grid-gap: 5px 5px;
 
 		}
 
@@ -155,10 +155,7 @@
 		  }
 
 		  	.left, .middle, .right {
-		    grid-area: 
-		    'left'
-		    'middle'
-		    'right' ;
+		    grid-area: unset;
 		  }
 		}
 		 #myTop {
