--- a/templates/play.html
+++ b/templates/play.html
@@ -170,6 +170,12 @@
 		  .left, .middle, .right {
 		    margin: 0;
 		  }
+
+		  .left, .right {
+		    display: none; /* Hiding the left and right sections on smaller screens */
+		  }
+		}
+
 		 #myTop {
             display: none; /* Hidden by default */
             position: fixed; /* Fixed position */
