--- a/templates/only.html
+++ b/templates/only.html
@@ -232,12 +232,16 @@
 			<p >與寶寶家人們第一次去離島玩</p>
 		</header>
 
-		<nav>
-			<a href ="/" >首頁</a> |
-			<a href ="/photo2" >照片牆2</a> |
-			<a href ="/photo3" >週年照片牆</a> |
-			<a href ="/play" >澎湖一日遊</a>  
-		</nav>
+		 <nav id="myTopnav" class="topnav">
+        <div class="nav-left">T AND Q LOVE</div>
+        <div class="nav-right" id="nav-right">
+            <a href="/job" class="active"><i class="fa-solid fa-briefcase"></i>工作經驗</a>
+            <a href="/live"><i class="fa-solid fa-school"></i>學校生活</a>
+            <a href="/love"><i class="fa-brands fa-gratipay"></i>興趣愛好</a>
+            <a href="/only"><i class="fa-solid fa-address-book"></i>作品與證照</a>
+            <a href="javascript:void(0);" class="icon" onclick="navFunction()">&#9776;</a>
+        </div>
+    	</nav>
 
 		<hr>
 
@@ -274,7 +278,7 @@
 		</aside>
 
 		<footer>
-			Copyright ©  楊荃喜. 許翔順. All Rights Reserved.
+			Copyright ©  楊荃喜 All Rights Reserved.
 		</footer>
 	</main>
 </body>
