--- a/templates/job.html
+++ b/templates/job.html
@@ -199,6 +199,12 @@
             overflow: hidden;
             background-color: beige;
         }
+
+        @media(max-width: 600px) {
+            .row {
+                flex-direction: column;
+                -webkit-flex-direction: column;
+        }
     </style>
 </head>
 
